--- a/Nutricionista/src/Vista/MenuJDP.form
+++ b/Nutricionista/src/Vista/MenuJDP.form
@@ -4,44 +4,60 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="menuJMB">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="pacienteJM">
+        <Menu class="javax.swing.JMenu" name="pacientesJM">
           <Properties>
             <Property name="text" type="java.lang.String" value="Pacientes"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="pacienteJMI">
+            <MenuItem class="javax.swing.JMenuItem" name="pacientesJMI">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Formulario Paciente"/>
+                <Property name="text" type="java.lang.String" value="Lista Pacientes"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pacienteJMIActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pacientesJMIActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="dietaJM">
+        <Menu class="javax.swing.JMenu" name="dietasJM">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Dieta"/>
+            <Property name="text" type="java.lang.String" value="Dietas"/>
+            <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="dietaJMI">
+            <MenuItem class="javax.swing.JMenuItem" name="dietasJMI">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Formualario Dieta"/>
+                <Property name="text" type="java.lang.String" value="Lista Dietas"/>
               </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="menuJM">
+        <Menu class="javax.swing.JMenu" name="comidasJM">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Comida"/>
+            <Property name="text" type="java.lang.String" value="Comidas"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="menuJMI">
+            <MenuItem class="javax.swing.JMenuItem" name="comidasJMI">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Formulario Comida"/>
+                <Property name="text" type="java.lang.String" value="Lista Comidas"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuJMIActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comidasJMIActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="ingredientesJM">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Ingredientes"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="ingredientesJMI">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Lista Ingredientes"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ingredientesJMIActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -72,27 +88,35 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jDesktopPane1" alignment="0" max="32767" attributes="0"/>
+          <Component id="panelPrincipal" alignment="0" pref="500" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jDesktopPane1" alignment="0" max="32767" attributes="0"/>
+          <Component id="panelPrincipal" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JDesktopPane" name="jDesktopPane1">
+    <Container class="javax.swing.JDesktopPane" name="panelPrincipal">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[500, 500]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[300, 500]"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="555" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="500" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="394" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="500" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
